Main view (without Settings) mostly translated #76

--- a/locales/locale-de.json
+++ b/locales/locale-de.json
@@ -1,7 +1,56 @@
 {
-  "LOGIN_SIGN_IN": "Anmelden",
-  "LOGIN_REMEMBER_ME": "Merken",
-  "LOGIN_USERNAME": "Benutzername",
-  "LOGIN_PASSWORD": "Passwort"
-
+  "SIGN_IN": "Anmelden",
+  "REMEMBER_ME": "Merken",
+  "USERNAME": "Benutzername",
+  "PASSWORD": "Passwort",
+  "BOARDS" : "Boards",
+  "SETTINGS" : "Einstellungen",
+  "LOGOUT": "Abmelden",
+  "SELECT_BOARD": "Board wählen:",
+  "HIDE_FILTERED_ITEMS": "Gefilterte Elemten ausblenden:",
+  "USE_FILTER": "Filter wählen:",
+  "CATEGORY_FILTER": "Kategorie Filter:",
+  "LOADING_BOARD": "Lade Board...",
+  "FILTER_ANY": "Alle",
+  "ERROR_LOADING_BOARD": "Fehler beim laden des Boards",
+  "ERROR_BOARD_DONT_EXISTS": "Möglicherweise existiert es nicht mehr. Möglicherweise haben sie keine Rechte dafür.",
+  "SELECT_BOARD_FROM_LIST": "Wählen Sie ein Board von der Liste oben, oder prüfen Sie die",
+  "ASSIGN_TO": "Zugewiesen",
+  "VIEW_ITEM": "Element anzeigen",
+  "EDIT_ELEMENT": "Element editieren",
+  "DELETE_ELEMENT": "Löschen",
+  "MOVE_TO_COLUMN": "Verschieben in die Spalte:",
+  "ADD_NEW_ELEMENT": "Neues Element erstellen",
+  "QUICK_ADD_BLANK_FOR_DIALOG": "Titel eingeben zum Erstellen - Leer lassen für Dialog",
+  "CLOSE": "Schliessen",
+  "ACTIVITY": "Aktivitäten",
+  "COMMENTS": "Kommentare",
+  "EDIT_COMMENTS": "Kommentar bearbeiten",
+  "ADD_COMMENTS": "Kommentieren",
+  "ADD_ATTACHMENT": "Anhang hinzufügen",
+  "ADD_ITEM": "Element hinzufügen",
+  "EDIT_ITEM": "Element editieren",
+  "TITLE": "Titel",
+  "TITLE_PLACEHOLDER": "Element Titel",
+  "DESCRIPTION": "Beschreibung",
+  "DESCRIPTION_PLACEHOLDER": "Was mus erledigt werden?",
+  "CATEGORY": "Kategrie",
+  "COLUMN": "Spalte",
+  "COLOR": "Farbe",
+  "DATE_DUE": "Fälligkeit",
+  "DUE": "Fälligkeit",
+  "POINTS": "Punkte",
+  "CANCEL": "Abbrechen",
+  "ADD_ITEM": "Element hinzufügen",
+  "SAVE_ITEM": "Element speichern",
+  "LOADING": "Lade...",
+  "NO_DEFAULT_BOARD": "Kein standard Board",
+  "NO_BOARD": "keine Boards",
+  "CURRENT_COLUMN": "Aktuelle Spalte",
+  "ATTACHMENT": "Anhänge",
+  "UPLOADED_BY": "Hochgeladen von",
+  "ON_DATE": "um",
+  "DELETING": "Lösche...",
+  "UPLOAD": "Hochladen",
+  "SUBMIT_COMMENT": "Submit Comment"
 }
