--- a/locales/locale-en.json
+++ b/locales/locale-en.json
@@ -1,7 +1,56 @@
 {
-  "LOGIN_SIGN_IN": "Sign in",
-  "LOGIN_REMEMBER_ME": "Remember me",
-  "LOGIN_USERNAME": "Username",
-  "LOGIN_PASSWORD": "Password"
-
+  "SIGN_IN": "Sign in",
+  "REMEMBER_ME": "Remember me",
+  "USERNAME": "Username",
+  "PASSWORD": "Password",
+  "BOARDS" : "Boards",
+  "SETTINGS" : "Settings",
+  "LOGOUT": "Logout",
+  "SELECT_BOARD": "Select Board:",
+  "HIDE_FILTERED_ITEMS": "Hide Filtered Items:",
+  "USE_FILTER": "User Filter:",
+  "CATEGORY_FILTER": "Category Filter:",
+  "LOADING_BOARD": "Loading Board...",
+  "FILTER_ANY": "Any",
+  "ERROR_LOADING_BOARD": "Error Loading Board",
+  "ERROR_BOARD_DONT_EXISTS": "Maybe it doesn't exist anymore. Maybe you've been removed from it.",
+  "SELECT_BOARD_FROM_LIST": "Try using the board list above, or checking your",
+  "ASSIGN_TO": "Assigned To",
+  "VIEW_ITEM": "View Item",
+  "EDIT_ELEMENT": "Edit Item",
+  "DELETE_ELEMENT": "Delete Item",
+  "MOVE_TO_COLUMN": "Move to Column:",
+  "ADD_NEW_ELEMENT": "Add New Item",
+  "QUICK_ADD_BLANK_FOR_DIALOG": "Quick Add Item Title - Leave Blank for Dialog",
+  "CLOSE": "Close",
+  "ACTIVITY": "Activity",
+  "COMMENTS": "Comments",
+  "EDIT_COMMENTS": "Edit Comment",
+  "ADD_COMMENTS": "Add Comment",
+  "ADD_ATTACHMENT": "Add Attachment",
+  "ADD_ITEM": "Add Item",
+  "EDIT_ITEM": "Edit Item",
+  "TITLE": "Title",
+  "TITLE_PLACEHOLDER": "Item Title",
+  "DESCRIPTION": "Description",
+  "DESCRIPTION_PLACEHOLDER": "What needs to get done?",
+  "CATEGORY": "Category",
+  "COLUMN": "Column",
+  "COLOR": "Color",
+  "DATE_DUE": "Date Due",
+  "DUE": "Due",
+  "POINTS": "Points",
+  "CANCEL": "Cancel",
+  "ADD_ITEM": "Add Item",
+  "SAVE_ITEM": "Save Item",
+  "LOADING": "Loading...",
+  "NO_DEFAULT_BOARD": "No Default Board",
+  "NO_BOARD": "No Boards",
+  "CURRENT_COLUMN": "Current Column",
+  "ATTACHMENT": "Attachments",
+  "UPLOADED_BY": "Uploaded by",
+  "ON_DATE": "on",
+  "DELETING": "Deleting...",
+  "UPLOAD": "Upload",
+  "SUBMIT_COMMENT": "Submit Comment"
 }
